--- a/dgm/package.json
+++ b/dgm/package.json
@@ -14,8 +14,11 @@
   },
   "devDependencies": {
     "gulp-autoprefixer": "^6.0.0",
+    "gulp-clean-css": "^3.10.0",
+    "gulp-concat-css": "^3.1.0",
     "gulp-livereload": "^4.0.0",
     "gulp-rename": "^1.4.0",
-    "gulp-sass": "^4.0.2"
+    "gulp-sass": "^4.0.2",
+    "gulp-uglify": "^3.0.1"
   }
 }
