--- a/dgm/package.json
+++ b/dgm/package.json
@@ -13,6 +13,7 @@
     "sass": "^1.14.3"
   },
   "devDependencies": {
+    "browser-sync": "^2.26.3",
     "gulp-autoprefixer": "^6.0.0",
     "gulp-clean-css": "^3.10.0",
     "gulp-concat-css": "^3.1.0",
